--- a/optimset.tex
+++ b/optimset.tex
@@ -400,7 +400,7 @@ is indeed optimal in terms of well-poisedness.
 
 \subsection{Well-poisedness of the interpolation set}
 
-We now investigate the $\Lambda$-poisedness~$\xpt[0]_m$. % for different values of~$m \in \{n+2, n+3, \dots, 2n+1\}$.
+We now investigate the $\Lambda$-poisedness of~$\xpt[0]_m$. % for different values of~$m \in \{n+2, n+3, \dots, 2n+1\}$.
 We will do this in the closed~$\ell_p$-norm ball of radius~$\Delta$ centred at the origin, namely
 \begin{equation*}
     \mathcal{B}_p(\Delta) = \set{x \in \R^n : \norm{x}_p \le \Delta},
@@ -548,8 +548,12 @@ henceforth
 
 \subsubsection{Some special cases}
 
-Examining the second part of the proof for Theorem~\ref{thm:bounds}, we can see that~$\Lambda_\infty = n$, attaining the upper bound in~\eqref{eq:bounds}.
-There are more cases where we can calculate the exact value of~$\Lambda_p$, as will be detailed in the following.
+Examining the second part of the proof for Theorem~\ref{thm:bounds}, we can see that
+\begin{equation*}
+    \Lambda_\infty = \max\{n-1,\, 2n-m+2\}.
+\end{equation*}
+%, attaining the upper bound in~\eqref{eq:bounds}.
+There are more cases where we can calculate the value of~$\Lambda_p$, as we will detail in the following.
 
 First, when~$1\le p\le 2$, $\Lambda_p$ actually equals the lower bound in~\eqref{eq:bounds}.
 
