--- a/optimset.tex
+++ b/optimset.tex
@@ -550,9 +550,9 @@ henceforth
 
 Examining the second part of the proof for Theorem~\ref{thm:bounds}, we can see that
 \begin{equation*}
-    \Lambda_\infty = \max\{n-1,\, 2n-m+2\}.
+    \Lambda_\infty = \max\{n-1,\, 2n-m+2\},
 \end{equation*}
-%, attaining the upper bound in~\eqref{eq:bounds}.
+which is either~$n-1$ or~$n$ since~$m\ge n+2$.
 There are more cases where we can calculate the value of~$\Lambda_p$, as we will detail in the following.
 
 First, when~$1\le p\le 2$, $\Lambda_p$ actually equals the lower bound in~\eqref{eq:bounds}.
