--- a/optimset.tex
+++ b/optimset.tex
@@ -760,7 +760,7 @@ The authors report that there are no competing interests to declare.
 \paragraph*{Funding}
 This work was supported by the University Grants Committee of Hong Kong under grants PF18-24698 (Hong Kong Ph.D. Fellowship Scheme), PolyU 253012/17P, PolyU 153054/20P, and PolyU 153066/21P, and by The Hong Kong Polytechnic University under grant P0009767.
 
-\bibliographystyle{amsplain}
+\bibliographystyle{plain}
 \bibliography{\jobname}
 
 \end{document}
